--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/ui": "^2.21.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "@vueuse/motion": "^2.2.6",
     "nuxt": "^3.15.2",
     "nuxt-storage": "^1.2.2",
     "vue": "latest",
